--- a/vehicle/src/main/resources/application.properties
+++ b/vehicle/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8181
 
 #database properties
 #Basic Spring Boot Config for Oracle
-spring.datasource.url= jdbc:oracle:thin:@10.117.115.177:1521/xe
+spring.datasource.url= jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=scott
 spring.datasource.password=tiger
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
