--- a/vehicle/src/main/resources/application.properties
+++ b/vehicle/src/main/resources/application.properties
@@ -1,16 +1,12 @@
 server.port=8181
 
-#database properties
-#Basic Spring Boot Config for Oracle
-spring.datasource.url= jdbc:oracle:thin:@10.117.115.177:1521/xe
-spring.datasource.username=scott
-spring.datasource.password=tiger
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
- 
-#hibernate config
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:mysql://10.117.116.61/vehicleparkingapplication
+spring.datasource.username=srikanth
+spring.datasource.password=srikanth
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dialect =org.hibernate.dialect.MySQLDialect
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.hibernate.show_sql = true
 spring.jpa.hibernate.hbm2ddl.auto = update
-spring.jpa.hibernate.ddl-auto= update	
+spring.jpa.hibernate.ddl-auto= update
